# TabletopSherpa

./: .gitignore  README.md  main.py  pyproject.toml
backend/: query.py
backend/ingestion/: ingest_rulebook.py  ingest_stratagems.py
backend/tests/: chromaranktest.py
backend/util/: chroma_utils.py  chromaqueryex.py  clean_html.py
