[project]
name = "wahalawyer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chardet>=5.2.0",
    "chromadb>=1.5.9",
    "html-parser>=0.2",
    "ollama>=0.6.2",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "pypdf>=6.12.2",
]
